--- a/season/templates/season/season_money.html
+++ b/season/templates/season/season_money.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include "season/_season_header.html" %}
 
-<h3 class="mt-3">Prize Summary</h3>
+<h3 class="mt-3">Money</h3>
 
 <div class="table-responsive">
     {% for category, items in grouped_payouts.items %}
